# shardik

./: .gitignore  Cargo.toml  Demo.ps1  DemoContention.ps1  build.rs
benches/: multi_client.rs
proto/: shardik.proto
src/: api.rs  lib.rs  metrics.rs  resource.rs
src/client/: cache.rs  lock.rs  logger.rs  main.rs  ui.rs
src/server/: connection.rs  main.rs  service.rs
src/summary/: main.rs
