[package]
name = "shardik"
version = "0.1.0"
authors = ["Andrew Hickman <andrew.hickman1@sky.com>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
bench = false

[[bin]]
name = "client"
path = "src/client/main.rs"
bench = false

[[bin]]
name = "summary"
path = "src/summary/main.rs"
bench = false

[lib]
bench = false

[[bench]]
name = "multi_client"
harness = false

[dependencies]
tonic = "0.1.0-alpha.1"
tokio = { version = "=0.2.0-alpha.6", features = ["process"] }
log = "0.4"
futures-preview = "0.3.0-alpha.19"
prost = "0.5"
bytes = "0.4"
env_logger = "0.7"
async-stream = "0.1.2"
chashmap = "2.2.2"
structopt = "0.3.2"
fs2 = "0.4.3"
rand = "0.7.2"
rand_distr = "0.2.2"
serde = { version = "1.0.101", features = ["derive"] }
csv = "1.1.1"
stats = { package = "streaming-stats", version = "0.2.2" }

[dev-dependencies]
criterion = "0.3.0"

[build-dependencies]
tonic-build = "0.1.0-alpha.1"
